--- a/fitTracker_app/views/index.ejs
+++ b/fitTracker_app/views/index.ejs
@@ -7,13 +7,12 @@
 </head>
 <body>
     <nav>
-      < a href="/workouts/new">Create a new Workout</a>
+      <a href="/workouts/new">Create a new Workout</a>
     </nav>
     <h1>FitTracker App</h1>
     <form action="/user/logout?_method=DELETE" method="POST">
       <input type="submit" value="Logout" />
     </form>
-    <h2>Welcome, <%=user.username%>!</h2>
     <h3>Workouts</h3>
     <% for(let i = 0; i < workouts.length; i++){ %>
       <p><%=workouts[i].workout%></p>
@@ -27,3 +26,6 @@
       <form action="/workouts/<%=workouts[i].id%>/edit" method="GET">
         <input type="submit" value="Edit Workout" />
       </form>
+    <% } %>
+</body>
+</html>
