--- a/fitTracker_app/views/edit.ejs
+++ b/fitTracker_app/views/edit.ejs
@@ -5,7 +5,7 @@
         <title></title>
     </head>
     <body>
-        <h1>Edit Fruit Page</h1>
+        <h1>Edit Workout Page</h1>
         <form action="/workouts/<%=workout.id%>?_method=PUT" method="POST">
     		<!--  NOTE: the form is pre-populated with values for the server-->
     		Workout Name: <input type="text" name="workout" value="<%=workout.workout%>"/><br/>
