--- a/fitTracker_app/views/new.ejs
+++ b/fitTracker_app/views/new.ejs
@@ -14,47 +14,73 @@
   </head>
   <body>
     <nav class="navbar fixed-top">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="offcanvas offcanvas-start"
-          tabindex="-1"
-          id="offcanvasNavbar"
-          aria-labelledby="offcanvasNavbarLabel"
-        >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">FitTracker</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" data-page="workouts" href="/workouts"
-                  >Workouts</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-page="createaworkout" href="/workouts/new">Create A Workout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
+			<div class="container-fluid">
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="offcanvas"
+					data-bs-target="#offcanvasNavbar"
+					aria-controls="offcanvasNavbar"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="offcanvas offcanvas-start"
+					tabindex="-1"
+					id="offcanvasNavbar"
+					aria-labelledby="offcanvasNavbarLabel"
+				>
+					<div class="offcanvas-header">
+						<h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+							FitTracker
+						</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="offcanvas"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="offcanvas-body">
+						<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									data-page="workouts"
+									href="/workouts"
+									>Workouts</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									data-page="createaworkout"
+									href="/workouts/new"
+									>Create A Workout</a
+								>
+							</li>
+							<li class="nav-item">
+								<form
+									action="/user/logout?_method=DELETE"
+									method="POST"
+									class="d-inline"
+								>
+									<button
+										type="submit"
+										value="Logout"
+										class="btn btn-link nav-link"
+									>
+										Logout
+									</button>
+								</form>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
     
     <section
     class="login-page vh-100 d-flex align-items-center justify-content-center"
