--- a/fitTracker_app/views/show.ejs
+++ b/fitTracker_app/views/show.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FitTracker App</title>
-</head>
-<body>
-  <h1>FitTracker App</h1>
-  <h2>All Workouts</h2>
-  <ul>
-    <% workouts.forEach(function(workout) { %>
-      <li><%= workout.name %> - <%= workout.duration %> minutes</li>
-    <% }); %>
-  </ul>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>FitTracker App</title>
+	</head>
+	<body>
+		<h1>FitTracker App</h1>
+		<h2>All Workouts</h2>
+		<ul>
+			<% workouts.forEach(function(workout) { %>
+			<li><%= workout.name %> - <%= workout.duration %> minutes</li>
+			<% }); %>
+		</ul>
+	</body>
 </html>
-  
