--- a/fitTracker_app/views/index.ejs
+++ b/fitTracker_app/views/index.ejs
@@ -1,41 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">     
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <link href="/css/app.css" rel="stylesheet"  type="text/css">
-        <title>Fitness Tracker</title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+		<link href="/css/app.css" rel="stylesheet" type="text/css" />
+		<title>Fit Tracker</title>
+	</head>
+	<body>
+		<nav class="navbar fixed-top">
+			<div class="container-fluid">
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="offcanvas"
+					data-bs-target="#offcanvasNavbar"
+					aria-controls="offcanvasNavbar"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="offcanvas offcanvas-start"
+					tabindex="-1"
+					id="offcanvasNavbar"
+					aria-labelledby="offcanvasNavbarLabel"
+				>
+					<div class="offcanvas-header">
+						<h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+							FitTracker
+						</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="offcanvas"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="offcanvas-body">
+						<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									data-page="workouts"
+									href="/workouts"
+									>Workouts</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									data-page="createaworkout"
+									href="/workouts/new"
+									>Create A Workout</a
+								>
+							</li>
+							<li class="nav-item">
+								<form
+									action="/user/logout?_method=DELETE"
+									method="POST"
+									class="d-inline"
+								>
+									<button
+										type="submit"
+										value="Logout"
+										class="btn btn-link nav-link"
+									>
+										Logout
+									</button>
+								</form>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
 
-
-
-
-
-
-
-    <nav>
-      <a href="/workouts/new">Create a new Workout</a>
-    </nav>
-    <h1>FitTracker App</h1>
-    <form action="/user/logout?_method=DELETE" method="POST">
-      <input type="submit" value="Logout" />
-    </form>
-    <h3>Workouts</h3>
-    <% for(let i = 0; i < workouts.length; i++){ %>
-      <p><%=workouts[i].workout%></p>
-      <p><%=workouts[i].reps%></p>
-      <p><%=workouts[i].weight%></p>
-      <p><%=workouts[i].date%></p>
-      <p><%=workouts[i].notes%></p>
-      <form action="/workouts/<%=workouts[i].id%>?_method=DELETE" method="POST">
-        <input type="submit" value="Delete Workout" />
-      </form>
-      <form action="/workouts/<%=workouts[i].id%>/edit" method="GET">
-        <input type="submit" value="Edit Workout" />
-      </form>
-    <% } %>
-</body>
+		<section
+			class="login-page vh-100 d-flex align-items-baseline justify-content-center"
+		>
+			<div class="container">
+				<div class="row">
+					<div class="col-6 my-5 p-2">
+						<table class="table table-bordered table-striped rounded-2">
+							<thead>
+								<tr>
+									<th scope="col">Workout</th>
+									<th scope="col">Reps</th>
+									<th scope="col">Weight</th>
+									<th scope="col">Date</th>
+									<th scope="col">Notes</th>
+									<th scope="col">Actions</th>
+								</tr>
+							</thead>
+							<tbody>
+								<% for(let i = 0; i < workouts.length; i++){ %>
+								<tr>
+									<td><%=workouts[i].workout%></td>
+									<td><%=workouts[i].reps%></td>
+									<td><%=workouts[i].weight%></td>
+									<td><%=workouts[i].date%></td>
+									<td><%=workouts[i].notes%></td>
+									<td>
+										<form
+											action="/workouts/<%=workouts[i].id%>?_method=DELETE"
+											method="POST"
+											class="d-inline"
+										>
+											<button type="submit" class="btn btn-danger btn-sm me-2">
+												Delete
+											</button>
+										</form>
+										<form
+											action="/workouts/<%=workouts[i].id%>/edit"
+											method="GET"
+											class="d-inline"
+										>
+											<button type="submit" class="btn btn-primary btn-sm">
+												Edit
+											</button>
+										</form>
+									</td>
+								</tr>
+								<% } %>
+							</tbody>
+						</table>
+					</div>
+					<div class="col-md-6">
+						<h1 class="fs-1 text-light fw-semibold text-center">FitTracker</h1>
+						<img
+							class="app-image mx-auto d-block"
+							style="max-width: 100%; height: auto"
+							src="https://pixabay.com/get/g882f8752b82edf08c1d92677b1a00767c87ce498e275b84961ea830b99f610d8f8c21dd0bb8f49b587b54cb656ef0f9265efb1aa81d59b0ad73414996313ffddb578bf4b0d07a83b650a4ace4e85b7e0_640.jpg"
+						/>
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
