complete more stylgin

--- a/fitTracker_app/views/login.ejs
+++ b/fitTracker_app/views/login.ejs
@@ -14,7 +14,7 @@
       <div class="row">
         <h1 class="fs-1 text-light fw-semibold text-center"> FitTracker </h1>
         <div class="col">
-          <img class="app-image mx-auto d-block" src="https://pixabay.com/get/g882f8752b82edf08c1d92677b1a00767c87ce498e275b84961ea830b99f610d8f8c21dd0bb8f49b587b54cb656ef0f9265efb1aa81d59b0ad73414996313ffddb578bf4b0d07a83b650a4ace4e85b7e0_640.jpg">
+          <img class="app-image mx-auto d-block" src="public/css/images/5f1vdg1x.png">
         </div>
       </div>
       <div class="row">
