--- a/fitTracker_app/views/edit.ejs
+++ b/fitTracker_app/views/edit.ejs
@@ -1,21 +1,134 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-        <h1>Edit Workout Page</h1>
-        <form action="/workouts/<%=workout.id%>?_method=PUT" method="POST">
-    		<!--  NOTE: the form is pre-populated with values for the server-->
-    		Workout Name: <input type="text" name="workout" value="<%=workout.workout%>"/><br/>
-    		Reps: <input type="text" name="reps" value="<%=workout.reps%>"/><br/>
-    		Weight: <input type="text" name="weight" value="<%=workout.weight%>"/><br/>
-        Date: <input type="text" name="date" value="<%=workout.date%>"/><br/>
-        Notes: <input type="text" name="notes" value="<%=workout.notes%>"/><br
-            />
-            <br/>
-            <input type="submit" name="" value="Submit Workout"/>
-        </form>
-    </body>
+	<head>
+		<meta charset="utf-8" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+		<link href="/css/app.css" rel="stylesheet" type="text/css" />
+		<title>Fit Tracker</title>
+	</head>
+	<body>
+		<nav class="navbar fixed-top">
+			<div class="container-fluid">
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="offcanvas"
+					data-bs-target="#offcanvasNavbar"
+					aria-controls="offcanvasNavbar"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="offcanvas offcanvas-start"
+					tabindex="-1"
+					id="offcanvasNavbar"
+					aria-labelledby="offcanvasNavbarLabel"
+				>
+					<div class="offcanvas-header">
+						<h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+							FitTracker
+						</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="offcanvas"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="offcanvas-body">
+						<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									aria-current="page"
+									data-page="workouts"
+									href="/workouts"
+									>Workouts</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link"
+									data-page="createaworkout"
+									href="/workouts/new"
+									>Create A Workout</a
+								>
+							</li>
+							<li class="nav-item">
+								<form
+									action="/user/logout?_method=DELETE"
+									method="POST"
+									class="d-inline"
+								>
+									<button
+										type="submit"
+										value="Logout"
+										class="btn btn-link nav-link"
+									>
+										Logout
+									</button>
+								</form>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
+		<section
+			class="login-page vh-100 d-flex align-items-baseline justify-content-center"
+		>
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-6 my-5 py-5 p-2">
+                        <h1>Edit Workout Page</h1>
+						<form
+							action="/workouts/<%=workout.id%>?_method=PUT"
+							method="post"
+							class="form-floating"
+						>
+							<div class="mb-3">
+								<label for="workoutName" class="form-label">Workout Name</label>
+								<input type="text" class="form-control" id="workoutName"
+								name"workout" value="<%=workout.workout%>" required>
+							</div>
+							<div class="mb-3">
+								<label for="reps" class="form-label">Reps</label>
+								<input type="number" class="form-control" id="reps" name"reps"
+								value="<%=workout.reps%>" required>
+							</div>
+							<div class="mb-3">
+								<label for="weight" class="form-label">Weight</label>
+								<input type="number" class="form-control" id="weight"
+								name"weight" value="<%=workout.weight%>" required>
+							</div>
+							<div class="mb-3">
+								<label for="date class="form-label">Date</label>
+								<input type="date" class="form-control" id="date"
+								name"date" value="<%=workout.date%>" required>
+							</div>
+							<div class="mb-3">
+								<label for="notes" class="form-label">Notes</label>
+								<input type="text" class="form-control" id="notes"
+								name"notes" value="<%=workout.notes%>" required>
+							</div>
+                            <button type="submit" class="btn btn-primary">Save</button>
+						</form>
+					</div>
+					<div class="col-md-6">
+						<h1 class="fs-1 text-light fw-semibold text-center">FitTracker</h1>
+						<img
+							class="app-image mx-auto d-block"
+							style="max-width: 100%; height: auto"
+							src="https://pixabay.com/get/g882f8752b82edf08c1d92677b1a00767c87ce498e275b84961ea830b99f610d8f8c21dd0bb8f49b587b54cb656ef0f9265efb1aa81d59b0ad73414996313ffddb578bf4b0d07a83b650a4ace4e85b7e0_640.jpg"
+						/>
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
