--- a/fitTracker_app/views/login.ejs
+++ b/fitTracker_app/views/login.ejs
@@ -14,7 +14,7 @@
       <div class="row">
         <h1 class="fs-1 text-light fw-semibold text-center"> FitTracker </h1>
         <div class="col">
-          <img class="app-image mx-auto d-block" src="public/css/images/5f1vdg1x.png">
+          <img class="app-image mx-auto d-block" src="public/css/images/cat-5773481_1920.jpg">
         </div>
       </div>
       <div class="row">
